bin_PROGRAMS = cached
cached_CFLAGS = $(libcurl_CFLAGS)  $(gamin_CFLAGS)  $(libpcre_CFLAGS)  $(libconfig_CFLAGS)
cached_LDFLAGS = $(libcurl_LIBS) $(gamin_LIBS)  $(libpcre_LIBS)  $(libconfig_LIBS)
cacheddir =  ${srcdir}
cached_SOURCES = cached.c cached.h fparser.c fparser.h downloader.c downloader.h download_worker.c download_worker.h
